<resources>
    <string name="app_name">Metal Detector</string>
    <string name="settings">Settings</string>
    <string name="graph">Graph</string>
    <string name="line">Line Graph</string>
    <string name="bar">Bar Graph</string>
    <string name="vibrate">Vibrate ON/OFF</string>
    <string name="sound">Sound ON/OFF</string>
    <string name="pause">Pause</string>
    <string name="sensitivity">Magnetic Wave:</string>
    <string name="back">Go Back</string>
    <string name="alert_rate">Alert Rate:</string>
    <string name="adjust">Alert Rate Adjust</string>
    <string name="adjust_input">Enter the desired alerting rate:</string>
    <string name="X">X Axis:</string>
    <string name="Y">Y Axis:</string>
    <string name="Z">Z Axis:</string>
    <string name="resume">Resume</string>
    <string name="data">Enter Data</string>
    <string name="title_activity_enterdata">enterdata</string>
    <string name="permission">Permission</string>
</resources>